--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@angular/router": "~12.2.0",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
+    "html2canvas": "^1.3.2",
     "jquery": "^3.6.0",
+    "jspdf": "^2.4.0",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.10",
     "tslib": "^2.3.0",
