--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@popperjs/core": "^2.10.2",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^4.5.0",
+    "bootstrap-notify": "^3.1.3",
     "html2canvas": "^1.3.2",
     "jquery": "^3.6.0",
     "jspdf": "^2.4.0",
