--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "examen-final-front",
   "version": "0.0.0",
   "engines": {
-    "node": "14.17.4"
+    "node": "14.17.4",
+    "npm": "6.14.14"
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve.js",
     "build": "ng build",
+    "lint": "ng lint",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "e2e": "ng e2e",
+    "lite": "lite-server",
+    "postinstall": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -26,10 +31,12 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^4.5.0",
     "bootstrap-notify": "^3.1.3",
+    "express": "^4.17.3",
     "html2canvas": "^1.3.2",
     "jquery": "^3.6.0",
     "jspdf": "^2.4.0",
     "moment": "^2.29.1",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.10",
     "tslib": "^2.3.0",
@@ -45,6 +52,7 @@
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
+    "lite-server": "^2.4.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.3.5"
