--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng server.js",
+    "start": "node server.js",
     "build": "ng build",
     "lint": "ng lint",
     "watch": "ng build --watch --configuration development",
